add swagger for reservation
